# backdown

./: Cargo.toml  README.md
src/: config.rs  journal.rs  main.rs  worker.rs
src/journal/: error.rs  mod.rs
src/worker/: error.rs  file.rs  intent.rs  message.rs  mod.rs
