[package]
name = "backdown"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backdownd"
path = "src/main.rs"

[dependencies]
notify = "6.1.1"
ron = "0.8.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = [
  "fs",
  "rt-multi-thread",
  "rt",
  "macros",
  "sync",
  "signal",
] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
