[package]
name = "vertebrae"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vertebraed"
path = "src/main.rs"

[dependencies]
async-recursion = "1.1.1"
notify = "6.1.1"
ron = "0.8.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha256 = "1.5.0"
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = [
  "fs",
  "rt-multi-thread",
  "rt",
  "macros",
  "sync",
  "signal",
  "io-util",
  "time",
] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
strip = "symbols"
lto = true
